<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	android:clipToPadding="false"
	android:paddingBottom="@dimen/dimen_60dp"
	android:fillViewport="true" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical" >

		<android.support.v7.widget.CardView
			android:layout_marginBottom="@dimen/dimen_15dp"
			card_view:cardElevation="5dp"
			android:layout_height="wrap_content"
			android:layout_width="match_parent">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="@dimen/dimen_5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgConsent"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_check_not_selected"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <TextView
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/dimen_5dp"
                        android:id="@+id/tvTitle"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/dimen_10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consent"
                        android:textColor="@color/consent_text_color"
                        android:textSize="@dimen/text_size_22sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <TextView
					android:layout_marginLeft="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:id="@+id/tvCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/required"
                    android:textColor="@color/consent_text_color"
                    android:textSize="@dimen/text_size_16sp" />

			</LinearLayout>

		</android.support.v7.widget.CardView>

		<android.support.v7.widget.CardView
			android:layout_margin="5dp"
			card_view:cardCornerRadius="2dp"
			card_view:cardElevation="5dp"
			android:layout_height="wrap_content"
			android:layout_width="match_parent">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:padding="@dimen/dimen_5dp">

				<LinearLayout
					android:layout_weight="1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<TextView
						android:layout_weight="1"
						android:layout_marginRight="@dimen/dimen_10dp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/consent"
						android:textColor="@color/consent_text_color"
						android:textSize="@dimen/text_size_16sp"
						android:textStyle="bold"/>

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/required"
						android:textColor="@color/gray_color"
						android:textSize="@dimen/text_size_16sp" />
				</LinearLayout>

				<android.support.v7.widget.SwitchCompat
					android:theme="@style/SwitchCompatTheme"
					android:id="@+id/switchConsent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

			</LinearLayout>

		</android.support.v7.widget.CardView>

		<android.support.v7.widget.CardView
			android:layout_margin="5dp"
			card_view:cardCornerRadius="2dp"
			card_view:cardElevation="5dp"
			android:layout_height="wrap_content"
			android:layout_width="match_parent">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="@dimen/dimen_5dp">
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/why"
					android:textColor="@color/consent_text_color"
					android:textSize="@dimen/text_size_16sp"
					android:textStyle="bold"/>
				<TextView
					android:id="@+id/tvWhy"
					android:layout_marginTop="@dimen/dimen_3dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="Medium Text"
					android:textColor="@color/consent_text_color"
					android:textSize="@dimen/text_size_16sp" />
			</LinearLayout>
		</android.support.v7.widget.CardView>

		<android.support.v7.widget.CardView
			android:layout_margin="5dp"
			card_view:cardCornerRadius="2dp"
			card_view:cardElevation="5dp"
			android:layout_height="wrap_content"
			android:layout_width="match_parent">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="@dimen/dimen_5dp">
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/what"
					android:textColor="@color/consent_text_color"
					android:textSize="@dimen/text_size_16sp"
					android:textStyle="bold"/>
				<TextView
					android:id="@+id/tvWhat"
					android:layout_marginTop="@dimen/dimen_3dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="Medium Text"
					android:textColor="@color/consent_text_color"
					android:textSize="@dimen/text_size_16sp" />
			</LinearLayout>
		</android.support.v7.widget.CardView>

		<android.support.v7.widget.CardView
			xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:card_view="http://schemas.android.com/apk/res-auto"
			android:layout_margin="5dp"
			card_view:cardCornerRadius="2dp"
			card_view:cardElevation="5dp"
			android:layout_height="wrap_content"
			android:layout_width="match_parent">

			<LinearLayout
				android:id="@+id/linearMoreInfo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="@dimen/dimen_5dp">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/more_information"
					android:textColor="@color/consent_text_color"
					android:textSize="@dimen/text_size_16sp"
					android:textStyle="bold"/>

				<TextView
					android:id="@+id/tvMoreInfo"
					android:layout_marginTop="@dimen/dimen_3dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="Medium Text"
					android:textColor="@color/consent_text_color"
					android:textSize="@dimen/text_size_16sp" />

				<TextView
					android:id="@+id/tvVisitPage"
					android:layout_marginTop="@dimen/dimen_10dp"
					android:layout_marginBottom="@dimen/dimen_10dp"
					android:gravity="center"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/visit_page"
					android:textColor="@color/consent_text_color"
					android:textSize="@dimen/text_size_16sp"
					android:textStyle="bold"/>

			</LinearLayout>

		</android.support.v7.widget.CardView>

	</LinearLayout>
</ScrollView>
