<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.projects.activities.CartActivity">

    <!--        <Button-->
<!--            android:id="@+id/instructions"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="@dimen/dimen_24dp"-->
<!--            android:layout_marginEnd="@dimen/dimen_64dp"-->
<!--            android:layout_marginLeft="@dimen/dimen_64dp"-->
<!--            android:layout_marginRight="@dimen/dimen_64dp"-->
<!--            android:layout_marginStart="@dimen/dimen_64dp"-->
<!--            android:background="@drawable/custom_button"-->
<!--            android:padding="@dimen/dimen_8dp"-->
<!--            android:text="@string/read_instructions"-->
<!--            android:textColor="@android:color/white"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/start"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            tools:ignore="UnknownId" />-->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/dimen_150dp"
        android:layout_height="@dimen/dimen_150dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginRight="@dimen/dimen_8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/splash_logo" />

    <Button
        android:id="@+id/pay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_64dp"
        android:layout_marginLeft="@dimen/dimen_64dp"
        android:layout_marginRight="@dimen/dimen_64dp"
        android:layout_marginStart="@dimen/dimen_64dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/cart"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcome_text"
        android:paddingLeft="@dimen/dimen_24dp"
        android:paddingRight="@dimen/text_size_12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/welcome_text"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintBottom_toTopOf="@+id/instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="UnknownId" />

</android.support.constraint.ConstraintLayout>